@@ -12,11 +12,15 @@ toc_DATA = man.xml toc.xml scrollkeeper.xml
 cssdir   = $(datadir)/yelp
 css_DATA = default.css
 
+jsdir   = $(datadir)/yelp
+js_DATA = yelp.js
+
 EXTRA_DIST =					\
 	yelp.schemas		yelp.schemas.in	\
 	man.xml			man.xml.in	\
 	toc.xml			toc.xml.in	\
-	scrollkeeper.xml	default.css
+	scrollkeeper.xml	default.css	\
+	yelp.js
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
